--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,11 @@ body {
 .header--main{
     font-weight: normal;
     font-size: 50px;
-    color: #fff;
-    
+    color: #fff;   
+}
+
+.link--cta {
+    font-size: 16px;
+    color: aquamarine;
+
 }
