--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,3 +30,11 @@ body {
     color: aquamarine;
 
 }
+
+/* FOOTER */ 
+
+.footer--copyright {
+    font-size: 21px;
+    color: grey;
+    text-align: right;
+}
